# server/routes/hallRoutes.js
@@ -1,0 +1,7 @@
+const router = require("express").Router()
+
+const hallController = require("../controllers/hallController")
+
+router.get("/", hallController.getHallOverview)
+
+module.exports = router
